--- a/uasdm-ui/src/app/site/component/modal/create-product-group-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-product-group-modal.component.html
@@ -4,31 +4,35 @@
 
 -->
 <div>
-    <div class="modal-body">
-        <div *ngIf="message != null" class="error-container">
-            <div class="label-holder">
-                <strong>Error</strong>
-            </div>
-            <div class="holder">
-                <div>
-                    <p class="error-message">{{message}}</p>
+    <form #myForm="ngForm">
+
+        <div class="modal-body">
+            <div *ngIf="message != null" class="error-container">
+                <div class="label-holder">
+                    <strong>Error</strong>
+                </div>
+                <div class="holder">
+                    <div>
+                        <p class="error-message">{{message}}</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-		<div class="form-group">
-			<label for="productName">Product name</label>
-			<input [(ngModel)]="productName" name="productName" type="input" class="form-control"
-				placeholder="Product name" />
-		</div>			
-    </div>
-    <div class="modal-footer">
-        <div class="btn-holder" style="text-align: right;">
-            <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button"
-                aria-disabled="false" style="padding: 4px 18px;">Cancel</button>
-				
-            <button type="button" (click)="confirm()" class="btn btn-primary" role="button" aria-disabled="false"
-                style="padding: 4px 18px;">Submit</button>
+            <div class="form-group">
+                <label for="productName">Product name</label>
+                <input [(ngModel)]="productName" name="productName" type="input" class="form-control"
+                    placeholder="Product name" required forbiddenName/>
+            </div>
         </div>
-    </div>
+        <div class="modal-footer">
+            <div class="btn-holder" style="text-align: right;">
+                <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button"
+                    aria-disabled="false" style="padding: 4px 18px;">Cancel</button>
+
+                <button type="button" [disabled]="myForm.invalid && (myForm.dirty || myForm.touched)" (click)="confirm()" class="btn btn-primary" role="button" aria-disabled="false"
+                    style="padding: 4px 18px;">Submit</button>
+            </div>
+        </div>
+    </form>
+
 </div>
