--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -199,7 +199,7 @@
 		<div class="btn-holder" style="text-align: right;">
 			<button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button"
 				aria-disabled="false" style="padding: 4px 18px;">Cancel</button>
-			<button type="button" [disabled]="myForm.invalid" (click)="confirm()" class="btn btn-primary" role="button"
+			<button type="button" [disabled]="myForm.invalid || !isValid()" (click)="confirm()" class="btn btn-primary" role="button"
 				aria-disabled="false" style="padding: 4px 18px;">Submit</button>
 		</div>
 	</div>
