chore: remove any active mapped artifacts when changing versions of a product

--- a/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-ui/src/app/site/component/product-panel/product-panel.component.html
@@ -47,7 +47,7 @@
                         <label>
                             <label>Versions</label>
                         </label>
-                        <select [(ngModel)]="view.productId" name="productId" (change)="setCurrent(view)">
+                        <select [(ngModel)]="view.productId" name="productId" (change)="setVersion(view)">
                             <option *ngFor="let product of view.products" [value]="product.id">{{product.productName}}</option>
                         </select>
                     </div>       
