chore: backend support for access control on product and component results

--- a/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
@@ -129,6 +129,14 @@
             </div>
           </div>
 
+          <div [@fadeInOnEnter] class="row" *ngIf="hasField('isPrivate')">
+            <div class="col-md-8">
+              <boolean-field [(value)]="page.selection.isPrivate" label="isPrivate">
+              </boolean-field>
+            </div>
+          </div>
+
+
           <metadata-page *ngIf="hasField('uav')" [(page)]="page"></metadata-page>
         </div>
       </div>
