chore: logging for command errors + styling for multiple products

--- a/uasdm-ui/src/app/site/component/modal/artifact-page.component.html
+++ b/uasdm-ui/src/app/site/component/modal/artifact-page.component.html
@@ -8,7 +8,7 @@
   <i *ngIf="loading" class="fa fa-spinner fa-spin" style="margin-left:50%;"></i>
 
   <div class="list-group" *ngIf="groups != null">
-    <div class="list-group-item" *ngFor="let group of groups">
+    <div class="list-group-item" *ngFor="let group of groups" style="border: 1px solid black">
       <div class="row">
         <div class="col-sm-4">
           <h3>
@@ -31,7 +31,9 @@
             </button>
           </span>
         </div>
+
       </div>
+
 
       <div class="row">
         <div class="col-sm-12">
