chore: update of products panel to restrict by the site filters when being selected from the hierarchies tab

--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -325,6 +325,7 @@
                           <product-panel *ngIf="activeTab === 'Products'" 
                             [selection]="current"
                             [organization]="organization"
+                            [filter]="filter"
                             (toggleMapOrtho)="handleMapOrtho($event)"
                             (toggleMapDem)="handleMapDem($event)"></product-panel>
                         </tab>
@@ -340,6 +341,7 @@
                           <product-panel *ngIf="activeTab === 'Products'" 
                             [selection]="current"
                             [organization]="organization"
+                            [filter]="filter"
                             (toggleMapOrtho)="handleMapOrtho($event)"
                             (toggleMapDem)="handleMapDem($event)"></product-panel>
                         </tab>
