chore: ability to edit standalone product metadata

--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -266,7 +266,7 @@
           <div class="btn-holder" style="margin: 20px 0px 10px 0px;">
             <div class="row">
               <div class="col-sm-4">
-                <button type="button" class="btn btn-warning" [disabled]="processRunning" (click)="handleSetMetadata()">
+                <button type="button" class="btn btn-warning" [disabled]="processRunning" (click)="editMetadata()">
                   <i class="fa fa-edit" style="color:white"></i>
                   Edit Metadata
                 </button>
